--- a/index.html
+++ b/index.html
@@ -5,47 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link href="style.css" type="text/css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/8a46b3ce85.js" crossorigin="anonymous"></script>
+    <script src="script.js" defer></script>
     <title>Document</title>
 </head>
 
 <body>
-    <section id="hero-section">
-        <nav id="nav-bar">
-            <a href=""><img src="/images/logo.svg" alt="Brand Logo">WAPO Design</a>
-            <ul class="nav-bar-ul">
-                <li><a href="">Company</a></li>
-                <li><a href="">Our Projects</a></li>
-                <li><a href="">Learn</a></li>
-            </ul>
-        </nav>
-        <div id="hero-text" class="row">
-            <div class="col-lg-10 col-sm-6">
-                <article class="article-text">
-                    <h2>Simple Digital <br>Transition</h2>
-                    <p>Visually engaging elements and top of the line functionality for you and your clients.</p>
-                    <br>
-                    <a class="btn-active" href="#">Let's Talk!</a>
-                </article>
-
-
-            </div>
+    <nav class="navbar">
+        <div class="brand-title">
+            <img src="/images/logo.svg" alt="Wapo Design Logo"><h1>WAPO Design</h1>
         </div>
-        <div id="hero-img" class="col-lg-7 col-sm-12">
-            <img src="/images/Artboard_1-removebg-preview 1.svg" alt="figure1">
-
-
+        <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+          <ul>
+            <li><a href="#">Company</a></li>
+            <li><a href="#">Our Projects</a></li>
+            <li><a href="#">Learn</a></li>
+          </ul>
         </div>
+      </nav>
 
-
-
-    </section>
 
 </body>
 
